@@ -1,0 +1,14 @@
+/*
+ * $Id$
+ *
+ * ROX-Session, a very simple session manager
+ * By Thomas Leonard, <tal197@users.sourceforge.net>.
+ */
+
+#ifndef _DBUS_H
+#define _DBUS_H
+
+/* Prototypes */
+void dbus_init(void);
+
+#endif /* _DBUS_H */
